<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Facingo</string>
    <string name="layoutMain_btn_achievements">Achievements</string>
    <string name="layoutMain_btn_levels">Levels</string>
    <string name="layoutMain_btn_info">Info</string>
    <string name="layoutMain_btn_settings">Settings</string>
    <string name="game_text_level">"Level: "</string>
    <string name="answerResult_text_correct">Right:</string>
    <string name="layoutMain_btn_start">Start</string>
    <string name="layoutSettingsDialog_text_cancel">CANCEL</string>
    <string name="layoutSettingsDialog_checkbox_warning_message2">You will lose everything!</string>
    <string name="layoutSettingsDialog_checkbox_warning_message1">Are you sure that you want to format the settings and the game?</string>
    <string name="layoutSettingsDialog_checkbox_warning">Warning</string>
    <string name="layoutSettingsDialog_checkbox_reset">Reset settings</string>
    <string name="layoutSettingsDialog_checkbox_language_eng">English</string>
    <string name="layoutSettingsDialog_checkbox_language_fin">Finnish</string>
    <string name="layoutSettingsDialog_checkbox_language">Language</string>
    <string name="layoutSettingsDialog_checkbox_vibration">Vibration on</string>
    <string name="layoutSettingsDialog_checkbox_soundOn">Soundeffects on</string>
    <string name="layoutSettingsDialog_text_settings">Settings</string>
    <string name="layoutLevels_text_points">Points</string>
    <string name="layoutCradItemContent_text_date">Date</string>
    <string name="layoutAchievement_text_achievement">Achievements</string>
    <string name="startBtn_text">Start</string>
    <string name="nextBtn_text">Next</string>
    <string name="backBtn_text">Back</string>
    <string name="levelsActivity_text_level">"Level "</string>
    <string name="levelDebrief_text_levelPassed_higherScore">Excellent! You have evolved to recognise faces well.</string>
    <string name="levelDebrief_text_levelPassed_middleScore">Good try! Keep training and the results will get better.</string>
    <string name="levelDebrief_text_levelPassed_lowerScore">Ouch! You should play the level again. Read the expression descriptions well.</string>
    <string name="answerResult_text_pepTalk_false">Better luck next time. Try to focus on these things in the emotion:</string>
    <string name="answerResult_text_pepTalk_correct">Correct! Try to focus on these things in the emotion:</string>
    <string name="layoutMain_dialog_info2">"Facingo is an expression recognizion game (prototype) which is made by students of Business Information Systems of Tampere University of Applied Sciences in conjunction with city of Tampere neuropsychological support team. "</string>
    <string name="aboutheader">About</string>
    <string name="creators">Creators</string>
    <string name="okBtn_text">OK</string>
    <string name="ach_101_long_desc">10 clicks in game.</string>
    <string name="ach_102_long_desc">100 clicks in game.</string>
    <string name="ach_103_long_desc">1000 clicks in game.</string>
    <string name="ach_104_long_desc">5000 clicks in game.</string>
    <string name="ach_105_long_desc">10000 clicks in game.</string>
    <string name="ach_201_long_desc">10 correct clicks in game.</string>
    <string name="ach_202_long_desc">100 correct clicks in game.</string>
    <string name="ach_203_long_desc">1000 correct clicks in game.</string>
    <string name="ach_204_long_desc">5000 correct clicks in game.</string>
    <string name="ach_205_long_desc">10000 correct clicks in game.</string>
    <string name="ach_301_long_desc">Level 1 completed.</string>
    <string name="ach_302_long_desc">Level 2 completed.</string>
    <string name="ach_303_long_desc">Level 3 completed.</string>
    <string name="ach_304_long_desc">Level 4 completed.</string>
    <string name="ach_305_long_desc">Level 5 completed.</string>
    <string name="ach_306_long_desc">Level 6 completed.</string>
    <string name="ach_307_long_desc">Level 7 completed.</string>
    <string name="ach_308_long_desc">Level 8 completed.</string>
    <string name="ach_309_long_desc">Level 9 completed.</string>
    <string name="ach_310_long_desc">Level 10 completed.</string>
    <string name="achievement_toast">Achievement!</string>
    <string name="ach_401_long_desc">You found the frustration!</string>
    <string name="ach_402_long_desc">You found the elusive facepalm.</string>
    <string name="ach_403_long_desc">You encountered the homemaker.</string>
    <string name="ach_404_long_desc">You encounted the werewolf!</string>
    <string name="ach_405_long_desc">You met someone protected.</string>
    <string name="ach_406_long_desc">You surprised someone!</string>
    <string name="nepsylink"><a href="http://www.tampere.fi/nepsy">Read more</a></string>
    <string name="creators_list">Creators: Anna Metsäpelto, Tanja Varvio, Tiina Malinen, Viljami Pietarila, Maija Visala, Hanna Tuominen</string>
    <string name="layoutMain_dialog_info1">The team consists of multifield personel of the city of Tampere, experts by expertice and members of autism assiciation of Tampere. The game was ordered by the city of Tampere.</string>

    <!--    <string name="yllättynyt">"The brows up, the eyes wide open, the mouth open. "</string>-->
<!--    <string name="halveksuva">One corner of the mouth is up.</string>-->
<!--    <string name="inhoava">"The nose wrinkled, the upper lip raised. "</string>-->
<!--    <string name="vihainen">The brows lowered, the lips tight but the mouth slightly open.</string>-->
<!--    <string name="pelokas">"The brows tight, the eyes wide open, the mouth slightly open. "</string>-->
<!--    <string name="iloinen">The eyes narrow, wrinkles around the eyes, a wide smile.</string>-->
<!--    <string name="surullinen">"The brows down and drawn together, the corners of the mouth lowered. "</string>-->
</resources>