<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#a29ccb"
        android:layout_marginBottom="30dp"
        android:layout_weight="5">
        <ImageView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_facingo_logo_1"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:layout_alignParentBottom="true"
        >
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/layoutMain_btn_start"
            android:textColor="@android:color/white"
            android:background="@drawable/main_btn_start"
            android:layout_marginBottom="15dp"
            android:onClick="startClick"
            android:id="@+id/start"
            android:textSize="18sp"
            android:drawableLeft="@drawable/ic_aloita_peli_1"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/layoutMain_btn_achievements"
            android:textColor="@android:color/white"
            android:background="@drawable/main_btn_achiv"
            android:layout_marginBottom="15dp"
            android:onClick="achivClick"
            android:textSize="18sp"
            android:id="@+id/achievements"
            android:drawableLeft="@drawable/ic_saavutukset"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/layoutMain_btn_levels"
            android:textColor="@android:color/white"
            android:background="@drawable/main_btn_levels"
            android:layout_marginBottom="15dp"
            android:textSize="18sp"
            android:onClick="levels"
            android:id="@+id/levels"
            android:drawableLeft="@drawable/ic_tasot_1"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/layoutMain_btn_settings"
            android:textColor="@android:color/white"
            android:background="@drawable/main_btn_settings"
            android:layout_marginBottom="15dp"
            android:onClick="settings"
            android:textSize="18sp"
            android:id="@+id/settings"
            android:drawableLeft="@drawable/ic_asetukset_1"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/layoutMain_btn_info"
            android:textColor="@android:color/white"
            android:background="@drawable/main_btn_info"
            android:textSize="18sp"
            android:onClick="about"
            android:id="@+id/about"
            android:drawableLeft="@drawable/ic_info_2"
            />

    </LinearLayout>
</LinearLayout>