<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="430dp"
        android:background="#fff"
        android:id="@+id/about_rel"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/heading_rel"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_above="@+id/logo1_rel"
            android:layout_alignParentTop="true"
            android:layout_marginTop="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginBottom="10dp"
            android:background="#585188"
            android:padding="10dp">

            <TextView
                android:id="@+id/heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/aboutheader"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="20sp"
                android:paddingTop="10dp"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/text_rel"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_above="@+id/info_app"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <TextView
                android:id="@+id/infotext2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/layoutMain_dialog_info2"
                android:textColor="#000"
                android:textSize="15sp"
                android:paddingTop="10dp"/>

            <TextView
                android:id="@+id/infotext1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/layoutMain_dialog_info1"
                android:textColor="#000"
                android:textSize="15sp"
                android:paddingTop="30dp"/>


        </RelativeLayout>


<!--        <RelativeLayout-->
<!--            android:id="@+id/logo2_rel"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="60dp"-->
<!--            android:layout_above="@+id/logo3_rel"-->
<!--            android:layout_marginBottom="10dp"-->
<!--            android:layout_marginLeft="10dp"-->
<!--            android:layout_marginRight="10dp"-->
<!--            android:gravity="center">-->

<!--        </RelativeLayout>-->

        <RelativeLayout
            android:id="@+id/logo3_rel"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:layout_above="@+id/text_rel"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            >
            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tamklogo"
                android:src="@drawable/tamklogo"
                android:layout_alignParentLeft="true"
                android:layout_toLeftOf="@id/tikologo"/>

            <ImageView
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:id="@+id/tikologo"
                android:src="@drawable/tikologofin"
                android:layout_alignParentRight="true"
                />
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/logo1_rel"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_below="@+id/info_app"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tamperelogo"
                android:src="@drawable/vaakunatampere"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/bottom_rel"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="10dp"
            android:background="#585188"
            android:padding="15dp"
            >

            <TextView
                android:id="@+id/action_ok"
                android:layout_width="100sp"
                android:minWidth="100sp"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:text="@string/okBtn_text"
                android:textColor="#000"
                android:textSize="20sp"
                android:gravity="center"
                android:layout_centerInParent="true"
                android:background="@drawable/quit_button"/>
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>